Fix show more button alignment

--- a/resources/assets/less/bem/show-more-link.less
+++ b/resources/assets/less/bem/show-more-link.less
@@ -62,7 +62,7 @@
   }
 
   &--notification-list {
-    margin-top: 8px;
+    margin: 8px auto 0;
   }
 
   &--profile-page {
